ma abbiamo lezione oggi?

--- a/chimica/C4/latex/dati_e_risultati.tex
+++ b/chimica/C4/latex/dati_e_risultati.tex
@@ -6,7 +6,7 @@
 Ogni metallo ha una diversa tendenza ad ossidarsi e un corrispondente potenziale di Nerst $E^\circ$, che indica la
 forza elettromotrice che il metallo genererebbe se collegato ad un elettrodo di idrogeno (elemento scelto come
 standard) a 25$^\circ$C. Per ottenere la f.e.m. di una generica cella galvanica basta sottrarre i potenziali di
-Nerst dei metalli usati; inoltre quello con il potenzione più alto è l'anodo (+), mentre quello più basso
+Nerst dei metalli usati; inoltre quello con il potenziale più alto è l'anodo (+), mentre quello più basso
 il catodo (-). Riportiamo in Tabella \ref{tab:nerst} i potenziali dei metalli usati:
 
 \begin{table}[h]
@@ -25,7 +25,7 @@ il catodo (-). Riportiamo in Tabella \ref{tab:nerst} i potenziali dei metalli us
 \end{table}
 
 Immergendo l'elettrodo di \ce{Cu} nella soluzione di \ce{CuSO4} e collegandolo, mediante un voltmetro, all'elettrodo
-di \ce{Zn} immerso nella soluzione di \ce{ZnSO4}, abbiamo verificato che, una volta inserito il ponte salino, tra i due materiali si trovava una forza elettromotrice di 1.08 V $\pm$ 0.02 V (l'incertezza è stata assegnata notado di quanto variava il valore sul monitor del multimetro). Osservando il segno riportato dal multimetro abbiamo verificato che l'elettrodo di \ce{Cu} era l'anodo (+), mentre quello \ce{Zn} era il catodo (-).
+di \ce{Zn} immerso nella soluzione di \ce{ZnSO4}, abbiamo verificato che, una volta inserito il ponte salino, tra i due materiali si trovava una forza elettromotrice di 1.08 V $\pm$ 0.02 V (l'incertezza è stata assegnata notando di quanto variava il valore sul monitor del multimetro). Osservando il segno riportato dal multimetro abbiamo verificato che l'elettrodo di \ce{Cu} era l'anodo (+), mentre quello \ce{Zn} era il catodo (-).
 Sia il valore ottenuto che il segno degli elettrodi è in accordo con i potenziali di Nerst, che prevedono
 1.10 V per la coppia di materiali usati.
 
@@ -67,7 +67,7 @@ con i potenziali standard, nonostante la temperatura fosse di 27$^\circ$C invece
 
 \subsection*{Misura della concentrazione di \ce{Ca^{2+}}}
 
-Abbiamo misurato diverse acque, del latte e un succo di frutta, confrontando, ove possibile i valori ottenuti con i dati riportati sull'etichetta. Nella seguente tabella sono esposti i risultati:
+Abbiamo misurato diverse acque, del latte e un succo di frutta, confrontando, ove possibile, i valori ottenuti con i dati riportati sull'etichetta. Nella seguente tabella sono esposti i risultati:
 
 \begin{table}
 \centering
