--- a/chimica/C4/latex/dati_e_risultati.tex
+++ b/chimica/C4/latex/dati_e_risultati.tex
@@ -63,13 +63,14 @@ ddp (\si{\milli\volt}) & 15.1 & 25.2 & 56 & 15.5 & 5.6 & 11.6 \\
 
 \end{table}
 
-Abbiamo misurato erroneamente, le concentrazioni di \ce{Ca2+} in soluzioni prive di ISA ottenendo risultati molto distanti da quelli nominali. Successivamente, una volta scoperto l'errore commesso, abbiamo preso delle nuove misure, le quali risultano molto vicine al valore nominale in nostro possesso.
-Per l'acqua Guizza la quale riporta in etichetta una concentrazione di  uguale a 10.6 mg/l mentre senza ISE otteniamo un valore di 26.8 mg/l con l'ISE si ottiene 14.3 mg/l.
-Analogamente con il latte, il quale è stato diluito 100 volte, abbiamo misurato senza ISA 6.34 mg/l mentre con si ha 10.5 mg/l. Il valore nominale, non reperibile sull'etichetta è stato ricercato nel web. Abbiamo trovato che un valore tipico è 1200 mg/l tale concentrazione è molto vicina a quella misurata, più vicina dell'altra ottenuta.
-L'acqua Panna riportante in etichetta un valore di 32.9 mg/l restituisce un valore sperimentale di 33.4 mg/l.
-L'acqua Ferrarelle è un acqua molto dura, infatti l'etichetta riporta una concentrazione di \ce{Ca2+} di 392 mg/l valore che noi misuriamo invece è di 460 mg/l.
-Anche per il succo di frutta, che è stato diluito 4 volte, abbiamo cercato un valore nella rete, a fronte di una concentrazione nominale di 34.5 mg/l (succo di pesca) il nostro valore è 10.6 mg/l.
-Questo breve riassunto qualitativo ci permette di osservare che tutte le misure raccolte hanno valori superiori di quelli previsti.
- 
-
+Abbiamo misurato erroneamente, le concentrazioni di \ce{Ca2+} in soluzioni prive di ISA ottenendo risultati molto distanti da quelli nominali.
+Successivamente, una volta scoperto l'errore commesso, abbiamo preso delle nuove misure, le quali risultano molto vicine al valore nominale in nostro possesso.
+Per l'acqua Guizza, la quale riporta in etichetta una concentrazione di \ce{Ca^{2+}} uguale a 10.6 mg/l, senza ISE otteniamo un valore di 26.8 mg/l mentre con l'ISE si ottiene 14.3 mg/l.
+Analogamente con il latte (diluito in acqua 100 volte), abbiamo misurato senza ISA 6.34 mg/l mentre con l'aggiunta dell'ISA si ottiene un valore di 10.5 mg/l.
+Il valore nominale, non reperibile sull'etichetta è stato ricercato nel web.
+Abbiamo trovato che per il latte un valore tipico di concentrazione di ioni \ce{Ca^{2+}} è 1200 mg/l; tale concentrazione è molto vicina a quella da noi misurata.
+Per l'acqua Panna, riportante in etichetta un valore di 32.9 mg/l, abbiamo ottenuto un valore sperimentale di 33.4 mg/l.
+L'acqua Ferrarelle è un acqua molto dura, infatti l'etichetta riporta una concentrazione di \ce{Ca2+} di 392 mg/l; noi abbiamo misurato invece un valore di 460 mg/l.
+Anche per il succo di frutta, che è stato diluito 4 volte, abbiamo cercato un valore nella rete. A fronte di una concentrazione nominale di 34.5 mg/l (succo di pesca) il nostro valore è 10.6 mg/l.
+Questo breve riassunto qualitativo ci permette di osservare che tutte le misure raccolte hanno valori superiori di quelli previsti e alcune volte discretamente distanti dai valori di etichetta delle soluzioni analizzate.
 
