--- a/chimica/C4/latex/conclusione.tex
+++ b/chimica/C4/latex/conclusione.tex
@@ -2,9 +2,9 @@
 
 Nella prima parte dell'esperienza abbiamo potuto studiare il comportamento di tre celle galvaniche costituite da elettrodi di tre materiali diversi.
 Inoltre abbiamo osservato che l'elettrodo in rame è stato usato sia come anodo, nella cella Ag-Cu, sia come catodo, nella cella Cu-Zn.
-Infine abbiamo verificato il funzionamento della cella Ag-Zn - quella con una f.e.m. maggiore - collegandola ad una LED.
+Infine abbiamo verificato il funzionamento della cella Ag-Zn - quella con una f.e.m. maggiore - collegandola ad un LED.
 Poiché la luce emessa dal diodo era molto poca, abbiamo assemblato più celle galvaniche Ag-Zn in serie grazie all'aiuto di altri gruppi di laboratorio.
-Con questa *situazione* la luce emessa del LED è aumentata.
+In questa condizione la luce emessa del LED è aumentata.
 
 Per quanto riguarda la seconda parte dell'esperienza, invece, abbiamo sicuramente scoperto che calibrare gli strumenti di misura occupa una parte consistente del tempo necessario per svolgere l'intera esperienza.
-Abbiamo inoltre verificato che è necessario mettere l'ISA prima di misurare la concentrazione di ioni \ce{Ca2+}, altrimenti le misure vengono sballate.
+Abbiamo inoltre verificato che è necessario mettere l'ISA prima di misurare la concentrazione di ioni \ce{Ca2+}, altrimenti le misure risultando errate.
