--- a/chimica/C4/latex/procedura.tex
+++ b/chimica/C4/latex/procedura.tex
@@ -86,3 +86,6 @@ atteso un po' che la soluzione entrasse in equilibrio e poi preso la misura. In 
 misurato il calcio presente nel latte e nel succo. Il latte è stato prima diluito di un fattore 100,
 mentre il succo è stato diluito di un fattore 4, entrambi con procedimenti analoghi a quelli spiegati nel paragrafo
 precedente e col matraccio da 100 ml.
+
+Durante le misure abbiamo controllato la temperatura, verificando che fosse sempre costante ed uguale a quella di taratura.
+La temperatura è rimasta tutto il pomeriggio molto vicina a 27$^\circ$C.
