pizza da consegnare!

--- a/chimica/C4/latex/conclusione.tex
+++ b/chimica/C4/latex/conclusione.tex
@@ -1,10 +1,11 @@
 \section*{Conclusione}
 
 Nella prima parte dell'esperienza abbiamo potuto studiare il comportamento di tre celle galvaniche costituite da elettrodi di tre materiali diversi.
-Inoltre abbiamo osservato che l'elettrodo in rame è stato usato sia come anodo, nella cella Ag-Cu, sia come catodo, nella cella Cu-Zn.
-Infine abbiamo verificato il funzionamento della cella Ag-Zn - quella con una f.e.m. maggiore - collegandola ad un LED.
-Poiché la luce emessa dal diodo era molto poca, abbiamo assemblato più celle galvaniche Ag-Zn in serie grazie all'aiuto di altri gruppi di laboratorio.
-In questa condizione la luce emessa del LED è aumentata.
+Inoltre abbiamo osservato che è stato possibile utilizzare l'elettrodo in rame sia come anodo, nella cella Ag-Cu, sia come catodo, nella cella Cu-Zn.
+Infine abbiamo verificato l'effettivo funzionamento della cella Ag-Zn - quella con una f.e.m. maggiore - collegandola ad un LED.
+Poiché la luce emessa dal diodo era molto debole, abbiamo collegato in serie più celle galvaniche Ag-Zn grazie all'aiuto di altri gruppi di laboratorio.
+In questa condizione l'intensità della luce emessa del LED è aumentata.
 
 Per quanto riguarda la seconda parte dell'esperienza, invece, abbiamo sicuramente scoperto che calibrare gli strumenti di misura occupa una parte consistente del tempo necessario per svolgere l'intera esperienza.
 Abbiamo inoltre verificato che è necessario mettere l'ISA prima di misurare la concentrazione di ioni \ce{Ca^{2+}}, altrimenti le misure risultando errate.
+Siamo però infine riusciti ad ottenere valori della concentrazione di ione \ce{Ca^{2+}} per ben sei sostanze diverse e per alcune delle quali a confrontare tale valore con quello esposto sull'etichetta del prodotto.
