--- a/chimica/C4/latex/dati_e_risultati.tex
+++ b/chimica/C4/latex/dati_e_risultati.tex
@@ -45,7 +45,7 @@ che si ottengono applicando 10 V ai suoi capi.
 
 \subsection*{Misura della concentrazione di \ce{Ca^{2+}}}
 
-Abbiamo misurato diverse acque, del latte e un succo di frutta, confrontando, ove possibile, i valori ottenuti con i dati riportati sull'etichetta. Nella seguente tabella sono esposti i risultati:
+Abbiamo misurato diverse acque, del latte e un succo di frutta, confrontando, ove possibile, i valori ottenuti con i dati riportati sull'etichetta. I risultati sono esposti in Tabella \ref{tab:vaccino}.
 
 \begin{table}
     \centering
@@ -69,12 +69,12 @@ Abbiamo misurato diverse acque, del latte e un succo di frutta, confrontando, ov
     \caption{La tabella riporta i dati misurati di concentrazione di \ce{Ca^{2+}} per vari campioni. Sono riportati sia
         i valori di concentrazione sia quelli di tensione misurata dal lettore. Inoltre per le acque in bottiglia,
         sono riportati i dati forniti dall'etichetta, mentre per latte e succo abbiamo indicato un valore tipico. Le incertezze
-    dove non esplicitate sono uguali a 0.1 mg/l per le concentrazione e a 0.1 mV per le tensioni.}
+    dove non esplicitate sono uguali a 0.1 mg/l per le concentrazioni e a 0.1 mV per le tensioni.}
     \label{tab:vaccino}
 \end{table}
 
 Abbiamo misurato erroneamente, le concentrazioni di \ce{Ca2+} in soluzioni prive di ISA ottenendo risultati molto distanti da quelli nominali.
-Successivamente, una volta scoperto l'errore commesso, abbiamo preso delle nuove misure, le quali risultano molto vicine al valore nominale in nostro possesso.
+Successivamente, una volta scoperto l'errore commesso, abbiamo preso delle nuove misure, le quali risultano molto più vicine al valore nominale in nostro possesso.
 Per l'acqua Guizza, la quale riporta in etichetta una concentrazione di \ce{Ca^{2+}} uguale a 10.6 mg/l, senza ISE otteniamo un valore di 26.8 mg/l mentre con l'ISE si ottiene 14.3 mg/l.
 Analogamente con il latte (diluito in acqua 100 volte), abbiamo misurato senza ISA 6.34 mg/l mentre con l'aggiunta dell'ISA si ottiene un valore di 10.5 mg/l.
 Il valore nominale, non reperibile sull'etichetta è stato ricercato nel web.
